--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Tin tức tự động</title>
-</head>
-<body>
-  <h1>Chào Linh!</h1>
-  <p>Trang web này sẽ hiển thị tin tức mới nhất từ n8n.</p>
-</body>
+  <head>
+    <title>My First GitHub Page</title>
+  </head>
+  <body>
+    <h1>Xin chào từ GitHub Pages!</h1>
+    <p>Đây là trang web đầu tiên của tôi.</p>
+  </body>
 </html>
