--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Tổng hợp tin tức</title>
-    <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; }
-        .article { margin-bottom: 20px; padding: 15px; border: 1px solid #ddd; }
-        .source { font-weight: bold; color: #333; }
-        .date { color: #666; font-size: 0.9em; }
-    </style>
-</head>
-<body>
-    <h1>Tổng hợp tin tức tự động</h1>
-    <div id="news-container"></div>
-
-    <script>
-        fetch('data/news-summary.json')
-            .then(response => response.json())
-            .then(data => {
-                const container = document.getElementById('news-container');
-                container.innerHTML = `<p class="date">Cập nhật lúc: ${data.date}</p>`;
-                
-                data.articles.forEach(article => {
-                    const articleDiv = document.createElement('div');
-                    articleDiv.className = 'article';
-                    articleDiv.innerHTML = `
-                        <p class="source">Nguồn: ${article.source}</p>
-                        <div>${article.content.substring(0, 500)}...</div>
-                    `;
-                    container.appendChild(articleDiv);
-                });
-            })
-            .catch(error => console.error('Error loading news:', error));
-    </script>
-</body>
-</html>
+<html><head><meta charset="UTF-8"><title>Tin tức tổng hợp</title></head><body><h1>Tin tức mới nhất</h1><ul></ul></body></html>
