--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta charset="UTF-8"><title>Tin tức tổng hợp</title></head><body><h1>Tin tức mới nhất</h1><ul></ul></body></html>
+<html><head><meta charset="UTF-8"><title>Tin tức tổng hợp</title></head><body><h1>Tin tức mới nhất</h1><ul><li><a href="https://vnexpress.net/mien-bac-se-mua-lon-tu-dem-nay-4922929.html" target="_blank">Miền Bắc sẽ mưa lớn từ đêm nay</a></li></ul></body></html>
