--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta charset="UTF-8"><title>Tin tức tổng hợp</title></head><body><h1>Tin tức mới nhất</h1><ul></ul></body></html>
+<html><head><meta charset="UTF-8"><title>Tin tức tổng hợp</title></head><body><h1>Tin tức mới nhất</h1><ul><li><a href="https://vnexpress.net/vi-sao-trung-quoc-loai-bo-xe-giuong-nam-4922917.html" target="_blank">Vì sao Trung Quốc loại bỏ xe giường nằm?</a></li></ul></body></html>
