"Cập nhật tin tức tự động"

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-index.html
+// Lấy phần HTML từ step parse RSS
+const newHtml = steps["code"].$return_value;
+
+// Tạo nội dung mới cho index.html
+const updatedContent = `
+<html>
+  <head><meta charset="UTF-8"><title>Tin tức VNExpress</title></head>
+  <body>
+    ${newHtml}
+  </body>
+</html>
+`;
+Buffer.from(updatedContent).toString("base64"); // GitHub API yêu cầu base64
