--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@ const updatedContent = `
   </body>
 </html>
 `;
-Buffer.from(updatedContent).toString("base64"); // GitHub API yêu cầu base64
+Buffer.from(updatedContent).toString("base64");
+// GitHub API yêu cầu base64
