Cập nhật tin tức tự động ngày {date}

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-'const newHtml = steps["code"].$return_value;
-
-const updatedContent = `
-<html>
-  <head><meta charset="UTF-8"><title>Tin tức VNExpress</title></head>
-  <body>
-    ${newHtml}
-  </body>
-</html>
-`;
-Buffer.from(updatedContent).toString("base64"); 
-'
+steps.process_with_ai.$return_value
