--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-steps.process_with_ai.$return_value
+'const newHtml = steps["code"].$return_value;
+
+const updatedContent = `
+<html>
+  <head><meta charset="UTF-8"><title>Tin tức VNExpress</title></head>
+  <body>
+    ${newHtml}
+  </body>
+</html>
+`;
+Buffer.from(updatedContent).toString("base64"); 
+'
